# digitalhub-tvm-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-image.sh
crates/tvm-relax/: Cargo.toml  build.rs
crates/tvm-relax/examples/: poc.rs
crates/tvm-relax/src/: lib.rs
crates/tvm-serve/: Cargo.toml  build.rs
crates/tvm-serve/src/: grpc.rs  main.rs  protocol.rs  worker.rs
scripts/: tvm-ffi-config
