[package]
name = "tvm-relax"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Wrapper Rust sottile su tvm-ffi: carica un model.so Relax ed esegue la TVM VirtualMachine."

[dependencies]
tvm-ffi.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

# PoC Fase 0: GO/NO-GO del runtime in Rust contro la reference di TVM Python.
[[example]]
name = "poc"
path = "examples/poc.rs"
