[package]
name = "tvm-serve"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Server Open Inference v2 (KServe) per modelli TVM Relax, sopra tvm-relax."

[[bin]]
name = "tvm-serve"
path = "src/main.rs"

[dependencies]
tvm-relax = { path = "../tvm-relax" }
tvm-ffi.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
# gRPC (Open Inference v2 / KServe)
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
# protoc vendorizzato: niente protoc di sistema da installare
protoc-bin-vendored = "3"
